complete section autodesk* | last commit 24.09.2024

--- a/index.html
+++ b/index.html
@@ -56,172 +56,191 @@
         </div>
     </header>
 
-    <div class="container">
-        <div class="buy-component">
-            <div class="buy-component__top">
-                <h2>Buy Revit</h2>
+    <section class="autodesk">
+        <div class="container --faq">
+            <div class="autodesk__title">Autodesk Revit: BIM software to design and make anything</div>
+            <div class="autodesk__subtitle"><p>Design buildings and infrastructure in 3D. Build greener projects. Transform the world.</p>
+                <p>Image courtesy of Stantec and EVER RED. Rendered in Twinmotion.</p>
             </div>
 
-            <div class="buy-component__tabs">
-                <button class="buy-component__tab" data-tab="first">
-                    Subscription
-                </button>
-                <button class="buy-component__tab" data-tab="second" data-sticker="NEW">
-                    Flex
-                </button>
+            <div class="autodesk__download">
+                <button><span class="ari-download"></span>Download free trial</button>
             </div>
 
-            <div class="buy-component__tabs-content" data-tab="first">
-                <div class="select-term">
-                    <div class="select-term__first">
-                        <div class="select-term__title">
-                            <h3>Select A Term</h3>
+            <div class="autodesk__info">
+                <p>Have questions about selecting or buying software?</p>
+                <a href="#"><span class="ari-chat"></span>Chat with our sales team</a>
+            </div>
+
+            <div class="buy-component">
+                <div class="buy-component__top">
+                    <h2>Buy Revit</h2>
+                </div>
+
+                <div class="buy-component__tabs">
+                    <button class="buy-component__tab" data-tab="first">
+                        Subscription
+                    </button>
+                    <button class="buy-component__tab" data-tab="second" data-sticker="NEW">
+                        Flex
+                    </button>
+                </div>
+
+                <div class="buy-component__tabs-content" data-tab="first">
+                    <div class="select-term">
+                        <div class="select-term__first">
+                            <div class="select-term__title">
+                                <h3>Select A Term</h3>
+                            </div>
+                            <div class="select-term__subtitle">
+                                <span class="ari-star"></span>
+                                Savings of 34% compared to monthly price
+                            </div>
+                            <div class="select-term__cards">
+
+                                <button class="select-term__card" data-select="first">
+                                    <span>3 year</span>
+                                    <p>???</p>
+                                    <span>Pay annually
+                                        <span class="ari-star"></span>
+                                    </span>
+                                </button>
+
+                                <button class="select-term__card" data-select="second">
+                                    <span>1 year</span>
+                                    <p>???</p>
+                                    <span>Most popular
+                                        <span class="ari-star"></span>
+                                    </span>
+                                </button>
+
+                                <button class="select-term__card" data-select="third">
+                                    <span>1 month</span>
+                                    <p class="select-term__up-price">???</p>
+                                </button>
+
+                            </div>
+
                         </div>
-                        <div class="select-term__subtitle">
-                            <span class="ari-star"></span>
-                            Savings of 34% compared to monthly price
-                        </div>
-                        <div class="select-term__cards">
 
-                            <button class="select-term__card" data-select="first">
-                                <span>3 year</span>
-                                <p>???</p>
-                                <span>Pay annually
-                                    <span class="ari-star"></span>
-                                </span>
+                        <div class="select-term__second">
+                            <div class="select-term__top --selected" data-term="first"><span
+                                    class="price-text-buy">$8,730</span><span class="desk-text-buy">/3 years for 1 user
+                                    (pay
+                                    annually)</span></div>
+                            <button class="select-term__button-add">
+                                <h2>ADD TO CART</h2>
+                                <span class="ari-arrow"></span>
                             </button>
-
-                            <button class="select-term__card" data-select="second">
-                                <span>1 year</span>
-                                <p>???</p>
-                                <span>Most popular
-                                    <span class="ari-star"></span>
-                                </span>
-                            </button>
-
-                            <button class="select-term__card" data-select="third">
-                                <span>1 month</span>
-                                <p class="select-term__up-price">???</p>
-                            </button>
-
+                            <div class="select-term__bottom">
+                                <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
+                                    (ACH)
+                                    accepted.
+                                    <span class="ari-revit-cost"></span>
+                                </p>
+                            </div>
                         </div>
 
                     </div>
+                </div>
 
-                    <div class="select-term__second">
-                        <div class="select-term__top --selected" data-term="first"><span
-                                class="price-text-buy">$8,730</span><span class="desk-text-buy">/3 years for 1 user (pay
-                                annually)</span></div>
-                        <button class="select-term__button-add">
-                            <h2>ADD TO CART</h2>
-                            <span class="ari-arrow"></span>
-                        </button>
-                        <div class="select-term__bottom">
-                            <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
-                                (ACH)
-                                accepted.
-                                <span class="ari-revit-cost"></span>
-                            </p>
+                <div class="buy-component__tabs-content --is-hide" data-tab="second">
+                    <div class="select-term">
+                        <div class="select-term__first">
+                            <div class="select-term__title-flex">
+                                <h3>Revit cost: 10 tokens/day
+                                    <span class="ari-revit-cost"></span>
+                                </h3>
+                            </div>
+
+                            <div class="select-term__cards">
+
+                                <button class="select-term__card" data-select="firstFlex">
+                                    <span>Minimum</span>
+                                    <p>$300</p>
+                                    <span>100tokens
+                                        <br>10days over 1 year</span>
+                                </button>
+
+                                <button class="select-term__card" data-select="secondFlex">
+                                    <span>Popular</span>
+                                    <p>$1,500</p>
+                                    <span>500 tokens <br>
+                                        50 days over 1 year</span>
+                                </button>
+
+                                <button class="select-term__card" data-select="thirdFlex">
+                                    <span>Custom</span>
+                                    <p>Varies</p>
+                                    <span>Estimate tokens</span>
+                                </button>
+
+                            </div>
+
                         </div>
+
+                        <div class="select-term__second">
+                            <div class="select-term__top --selected" data-term="first"><span class="price-text-buy"
+                                    id="price-buy-2">$8,730</span></div>
+                            <div class="select-term__buttons-buy">
+                                <button class="buttons-buy-tokens --btn-buy">Buy tokens</button>
+                                <button class="buttons-buy-flex --btn-buy">Learn how Flex works</button>
+                            </div>
+                            <div class="select-term__bottom">
+                                <p>Tokens expire 1 year from date of purchase. Not all products and features are
+                                    available
+                                    with Flex. <span class="learn-more">Learn more.</span></p>
+                            </div>
+                            <div class="select-term__bottom">
+                                <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
+                                    (ACH)
+                                    accepted.
+                                    <span class="ari-revit-cost"></span>
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
-
                 </div>
-            </div>
 
-            <div class="buy-component__tabs-content --is-hide" data-tab="second">
-                <div class="select-term">
-                    <div class="select-term__first">
-                        <div class="select-term__title-flex">
-                            <h3>Revit cost: 10 tokens/day
-                                <span class="ari-revit-cost"></span>
-                            </h3>
-                        </div>
-
-                        <div class="select-term__cards">
-
-                            <button class="select-term__card" data-select="firstFlex">
-                                <span>Minimum</span>
-                                <p>$300</p>
-                                <span>100tokens
-                                    <br>10days over 1 year</span>
-                            </button>
-
-                            <button class="select-term__card" data-select="secondFlex">
-                                <span>Popular</span>
-                                <p>$1,500</p>
-                                <span>500 tokens <br>
-                                    50 days over 1 year</span>
-                            </button>
-
-                            <button class="select-term__card" data-select="thirdFlex">
-                                <span>Custom</span>
-                                <p>Varies</p>
-                                <span>Estimate tokens</span>
-                            </button>
-
-                        </div>
-
+                <div class="buy-component__footer" data-tab="first">
+                    <div class="buy-component__nav">
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-buy"></span>
+                            Enjoy a 30-day money-back guarantee</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-lock-your-price"></span>
+                            Lock in your price for 3 years</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-buy-with-flex"></span>
+                            Buy with flexibility and security</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-see-more"></span>
+                            See more reasons to buy with Autodesk</a>
                     </div>
+                </div>
 
-                    <div class="select-term__second">
-                        <div class="select-term__top --selected" data-term="first"><span class="price-text-buy"
-                                id="price-buy-2">$8,730</span></div>
-                        <div class="select-term__buttons-buy">
-                            <button class="buttons-buy-tokens --btn-buy">Buy tokens</button>
-                            <button class="buttons-buy-flex --btn-buy">Learn how Flex works</button>
-                        </div>
-                        <div class="select-term__bottom">
-                            <p>Tokens expire 1 year from date of purchase. Not all products and features are available
-                                with Flex. <span class="learn-more">Learn more.</span></p>
-                        </div>
-                        <div class="select-term__bottom">
-                            <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
-                                (ACH)
-                                accepted.
-                                <span class="ari-revit-cost"></span>
-                            </p>
-                        </div>
+                <div class="buy-component__footer --footer-hide" data-tab="second">
+                    <div class="buy-component__nav">
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-Access"></span>
+                            Access more with Flex</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-usage"></span>
+                            Estimate your usage</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-buy"></span>
+                            Buy more, save more</a>
+                        <a class="buy-component__link" href="#">
+                            <span class="ari-pay-flex"></span>
+                            Pay as you go with Flex</a>
                     </div>
-
                 </div>
-            </div>
 
-            <div class="buy-component__footer" data-tab="first">
-                <div class="buy-component__nav">
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-buy"></span>
-                        Enjoy a 30-day money-back guarantee</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-lock-your-price"></span>
-                        Lock in your price for 3 years</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-buy-with-flex"></span>
-                        Buy with flexibility and security</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-see-more"></span>
-                        See more reasons to buy with Autodesk</a>
-                </div>
             </div>
-
-            <div class="buy-component__footer --footer-hide" data-tab="second">
-                <div class="buy-component__nav">
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-Access"></span>
-                        Access more with Flex</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-usage"></span>
-                        Estimate your usage</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-buy"></span>
-                        Buy more, save more</a>
-                    <a class="buy-component__link" href="#">
-                        <span class="ari-pay-flex"></span>
-                        Pay as you go with Flex</a>
-                </div>
-            </div>
-
         </div>
-    </div>
+
+    </section>
 
     <div class="container">
         <section class="ari-faq">
