add block autodesk assistant | last commit 25.09.2024

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <section class="autodesk">
         <div class="container --faq">
             <div class="autodesk__title">Autodesk Revit: BIM software to design and make anything</div>
-            <div class="autodesk__subtitle"><p>Design buildings and infrastructure in 3D. Build greener projects. Transform the world.</p>
+            <div class="autodesk__subtitle">
+                <p>Design buildings and infrastructure in 3D. Build greener projects. Transform the world.</p>
                 <p>Image courtesy of Stantec and EVER RED. Rendered in Twinmotion.</p>
             </div>
 
@@ -242,6 +243,125 @@
 
     </section>
 
+    <div class="container --faq">
+        <section class="ar-imagine">
+            <div class="ar-imagine__info">
+                <div class="ar-imagine__title">if you can imagine it, you can design it in Autodesk Revit</div>
+                <div class="ar-imagine__subtitle">Autodesk Revit allow architects, engineers, and construction
+                    professionals to:</div>
+
+                <ul class="ar-imagine__elements">
+                    <li class="ar-imagine__item">Model shapes, structures, and systems in 3D with parametric
+                        accuracy, precision, and ease.</li>
+                    <li class="ar-imagine__item">Streamline project management with instant revisions to plans,
+                        elevations, schedules, sections, sheets, and 3D visualizations.</li>
+                    <li class="ar-imagine__item">Unite multidisciplinary project teams for higher efficiency,
+                        collaboration, and impact in the office or on the jobsite.
+                    </li>
+                </ul>
+
+                <div class="ar-imagine__bottom">
+                    <a class="ar-imagine__see-link" href="#">See system requirements <span
+                            class="ari-winsvg"></span></a>
+                    <a class="ar-imagine__link" href="#"><span class="ari-arrowright"></span>Buy Revit in the AEC
+                        Collection</a>
+                </div>
+            </div>
+
+            <div class="ar-imagine__card">
+                <div class="ar-imagine__video" data-video="first"><video
+                        src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4"
+                        controls></video></div>
+                <div class="ar-imagine__video --hide-video" data-video="second"><video
+                        src="https://help.autodesk.com/videos/23ae0970-fd85-11ee-a103-9d5647070b99/video.webm"
+                        controls></video></div>
+                <div class="ar-imagine__images">
+                    <div class="ar-imagine__image-video"><img class="video-poster-1 --select" data-video="first"
+                            src="./image/poster-1.jpeg" alt="#"></div>
+                    <div class="ar-imagine__image-video"><img class="video-poster-2" data-video="second"
+                            src="./image/poster-2.jpeg" alt="#"></div>
+                </div>
+                <div class="ar-imagine__footer" data-video="first">Lake|Flato’s adaptive reuse project (video: 3:45
+                    min.)</div>
+                <div class="ar-imagine__footer --hide" data-video="second">Warren and Mahoney restored ChristChurch
+                    Cathedral after earthquake (video: 4:15 min.)</div>
+            </div>
+        </section>
+    </div>
+
+    <div class="container">
+        <section class="collection">
+            <div class="container --faq">
+                <div class="collection__flex">
+                    <div class="collection__first">
+                        <div class="collection__top">
+                            <div class="collection__title">
+                                <img class="group-image" src="./image/collection.png" alt="#">
+                                Product Design & Manufacturing Collection
+                            </div>
+                            <h3 class="collection__title-two">Extend the capabilities of Inventor with the collection
+                            </h3>
+                            <div class="collection__subtitle">The collection is a powerful set of applications that
+                                provides
+                                extended capabilities to Inventor and AutoCAD for engineers who design complex and
+                                custom
+                                products, equipment, and systems.</div>
+                        </div>
+                        <div class="collection__block-product">
+                            <div class="collection__block-top">Product Design & Manufacturing Collection includes:</div>
+
+                            <div class="collection__group-grid">
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
+                                </div>
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/fusion.png" alt="#">Fusion
+                                </div>
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/inventor.png" alt="#">Inventor Tolerance
+                                    Analysis
+                                </div>
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/inventor.png" alt="#">Inventor Nastran
+                                </div>
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/factory.png" alt="#">Factory Design Utilities
+                                </div>
+                                <div class="collection__item">
+                                    <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="collection__second">
+                        <div class="collection__learn">Learn how you can do more with Inventor</div>
+                        <div class="collection__video">
+                            <img class="collection-video-btn-1" src="./image/video-1.png" alt="#">
+                            <div class="collection__video-title">
+                                <h2>Best practices for 2D and 3D design</h2>
+                                Work in Inventor and AutoCAD to unlock capabilities that benefit the entire product
+                                development
+                                cycle. (Watch video 1:50 min.)
+                                <a href="#">Learn more</a>
+                            </div>
+                        </div>
+                        <div class="collection__video">
+                            <!-- <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4"> -->
+                            <img class="collection-video-btn-2" src="./image/video-2.png" alt="#">
+                            <div class="collection__video-title">
+                                <h2>Explore a complete product development solution</h2>
+                                See how integrated tools for Inventor bring your designs to life. Model courtesy of Joel
+                                Maia. (Video 2:34 min.)
+                                <a href="#">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
     <div class="container">
         <section class="ari-faq">
             <div class="container --faq">
@@ -377,79 +497,6 @@
     </div>
 
     <div class="container">
-        <section class="collection">
-            <div class="container --faq">
-                <div class="collection__flex">
-                    <div class="collection__first">
-                        <div class="collection__top">
-                            <div class="collection__title">
-                                <img class="group-image" src="./image/collection.png" alt="#">
-                                Product Design & Manufacturing Collection
-                            </div>
-                            <h3 class="collection__title-two">Extend the capabilities of Inventor with the collection
-                            </h3>
-                            <div class="collection__subtitle">The collection is a powerful set of applications that
-                                provides
-                                extended capabilities to Inventor and AutoCAD for engineers who design complex and
-                                custom
-                                products, equipment, and systems.</div>
-                        </div>
-                        <div class="collection__block-product">
-                            <div class="collection__block-top">Product Design & Manufacturing Collection includes:</div>
-
-                            <div class="collection__group-grid">
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
-                                </div>
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/fusion.png" alt="#">Fusion
-                                </div>
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/inventor.png" alt="#">Inventor Tolerance
-                                    Analysis
-                                </div>
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/inventor.png" alt="#">Inventor Nastran
-                                </div>
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/factory.png" alt="#">Factory Design Utilities
-                                </div>
-                                <div class="collection__item">
-                                    <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="collection__second">
-                        <div class="collection__learn">Learn how you can do more with Inventor</div>
-                        <div class="collection__video">
-                            <img class="collection-video-btn-1" src="./image/video-1.png" alt="#">
-                            <div class="collection__video-title">
-                                <h2>Best practices for 2D and 3D design</h2>
-                                Work in Inventor and AutoCAD to unlock capabilities that benefit the entire product
-                                development
-                                cycle. (Watch video 1:50 min.)
-                                <a href="#">Learn more</a>
-                            </div>
-                        </div>
-                        <div class="collection__video">
-                            <!-- <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4"> -->
-                            <img class="collection-video-btn-2" src="./image/video-2.png" alt="#">
-                            <div class="collection__video-title">
-                                <h2>Explore a complete product development solution</h2>
-                                See how integrated tools for Inventor bring your designs to life. Model courtesy of Joel
-                                Maia. (Video 2:34 min.)
-                                <a href="#">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <div class="container">
         <section class="products">
             <div class="container">
                 <div class="products__top">Compare related products</div>
@@ -520,52 +567,6 @@
                         </div>
                     </div>
                 </div>
-        </section>
-    </div>
-
-    <div class="container --faq">
-        <section class="ar-imagine">
-            <div class="ar-imagine__info">
-                <div class="ar-imagine__title">if you can imagine it, you can design it in Autodesk Revit</div>
-                <div class="ar-imagine__subtitle">Autodesk Revit allow architects, engineers, and construction
-                    professionals to:</div>
-
-                <ul class="ar-imagine__elements">
-                    <li class="ar-imagine__item">Model shapes, structures, and systems in 3D with parametric
-                        accuracy, precision, and ease.</li>
-                    <li class="ar-imagine__item">Streamline project management with instant revisions to plans,
-                        elevations, schedules, sections, sheets, and 3D visualizations.</li>
-                    <li class="ar-imagine__item">Unite multidisciplinary project teams for higher efficiency,
-                        collaboration, and impact in the office or on the jobsite.
-                    </li>
-                </ul>
-
-                <div class="ar-imagine__bottom">
-                    <a class="ar-imagine__see-link" href="#">See system requirements <span
-                            class="ari-winsvg"></span></a>
-                    <a class="ar-imagine__link" href="#"><span class="ari-arrowright"></span>Buy Revit in the AEC
-                        Collection</a>
-                </div>
-            </div>
-
-            <div class="ar-imagine__card">
-                <div class="ar-imagine__video" data-video="first"><video
-                        src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4"
-                        controls></video></div>
-                <div class="ar-imagine__video --hide-video" data-video="second"><video
-                        src="https://help.autodesk.com/videos/23ae0970-fd85-11ee-a103-9d5647070b99/video.webm"
-                        controls></video></div>
-                <div class="ar-imagine__images">
-                    <div class="ar-imagine__image-video"><img class="video-poster-1 --select" data-video="first"
-                            src="./image/poster-1.jpeg" alt="#"></div>
-                    <div class="ar-imagine__image-video"><img class="video-poster-2" data-video="second"
-                            src="./image/poster-2.jpeg" alt="#"></div>
-                </div>
-                <div class="ar-imagine__footer" data-video="first">Lake|Flato’s adaptive reuse project (video: 3:45
-                    min.)</div>
-                <div class="ar-imagine__footer --hide" data-video="second">Warren and Mahoney restored ChristChurch
-                    Cathedral after earthquake (video: 4:15 min.)</div>
-            </div>
         </section>
     </div>
 
@@ -645,6 +646,46 @@
             </div>
         </div>
     </section>
+
+    <div class="autodesk-widget">
+        <div class="autodesk-widget__layout --hide">
+            <div class="autodesk-widget__header">
+                <span class="header-title">Autodesk Assistant</span>
+                <span class="ari-close"></span>
+            </div>
+            <div class="autodesk-widget__content">
+                <div class="content__card">Hi, I’m Autodesk Assistant. I can help with product selection, purchasing,
+                    and support. If needed, you can also request an agent at any time via the input bar.</div>
+                <div class="content__card">I use AI to recommend solutions. I’m still learning, so please leave feedback
+                    to help me improve my answers.</div>
+                <div class="content__card">Please describe your question in detail using complete sentences, and mention
+                    product name and version, if applicable.
+                    <details class="content-card__bottom">
+                        <summary class="content__example">Show examples</summary>
+                        <p>You can say something like:</p>
+                        <p>What can Revit do?</p>
+                        <p>How do Flex tokens work?</p>
+                        <p>How do I download my AutoCAD trial?</p>
+                        <p>I’m using Maya 2024 and autosave isn't working.</p>
+                        <p>I’m an Architect looking for something to help me model 3D design concepts.</p>
+                    </details>
+                </div>
+
+                <div class="content__card-user">
+                    <!-- <div class="message-user"></div> -->
+                </div>
+            </div>
+            <div class="autodesk-widget__footer">
+                <textarea class="autodesk-widget__input" type="text" placeholder="Describe your question in detail"></textarea>
+                <span class="autodesk-widget__line"></span>
+                <button class="button-send"><span class="ari-send"></span></button>
+            </div>
+        </div>
+    </div>
+
+    <div class="au-assi">
+        <div class="au-assi__content">help</div>
+    </div>
 
     <dialog class="basket">
         <div class="basket__wrap">
