add tooltipe | last commit 27.09.2024

--- a/index.html
+++ b/index.html
@@ -651,7 +651,8 @@
         <div class="autodesk-widget__layout --hide">
             <div class="autodesk-widget__header">
                 <span class="header-title">Autodesk Assistant</span>
-                <span class="ari-close"></span>
+                <span data-tooltipe="Minimize" class="ari-block"></span>
+                <span data-tooltipe="Close" class="ari-close"></span>
             </div>
             <div class="autodesk-widget__content">
                 <div class="content__card">Hi, I’m Autodesk Assistant. I can help with product selection, purchasing,
