add button 'full screen' | last commit 28.09.2024

--- a/index.html
+++ b/index.html
@@ -652,6 +652,7 @@
             <div class="autodesk-widget__header">
                 <span class="header-title">Autodesk Assistant</span>
                 <span data-tooltipe="Minimize" class="ari-block"></span>
+                <span data-tooltipe="Full Screen" class="ari-fullscreen"></span>
                 <span data-tooltipe="Close" class="ari-close"></span>
             </div>
             <div class="autodesk-widget__content">
