divided into components js file | last commit 28.09.2024

--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
         </div>
     </dialog>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js" type="module"></script>
 
 </body>
 
